[project]
name = "lang-exec"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vladimir Margaryan", email = "v.margaryan204@gmail.com"},
]
dependencies = ["fastapi[uvicorn]>=0.115.7", "docker>=7.1.0", "uvicorn[standard]>=0.34.0", "aiofiles>=24.1.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
app = {cmd="uvicorn src.main:app"}
_.env_file = ".env"
